# src/feature/hashtag/application/dto/HashtagWithUsage.ts
@@ -1,0 +1,5 @@
+export interface HashtagWithUsage {
+  id: string
+  tag: string
+  usageCount: number
+}
